--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -101,6 +101,10 @@ html {
   transition: all 0.4s ease;
 }
 
+.nav-item{
+  cursor: pointer;
+}
+
 .menu-list .nav-item{
   border-radius: 10px;
   padding: 5px 10px;
