--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,6 @@
 {% load static %}
+<script src="{% static 'js/scroll.js' %}"></script>
+
 
 <nav class="navbar navbar-expand-md fixed-top">
     <div class="container-fluid">
@@ -8,7 +10,7 @@
                 <i class="fas fa-times"></i>
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="#">GET IN TOUCH</a>
+                <a class="nav-link" onclick="scrollToBlock('scroll-to-contact')">GET IN TOUCH</a>
             </li>
         </ul>
         <div class="icon menu-btn">
@@ -37,6 +39,5 @@
 
     window.onscroll = ()=>{
         this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
-
     }
 </script>
