--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -37,7 +37,7 @@
     <div class="title-card">
         <div class="container">
             <div class="title-card-banner">
-                <h3>Projects</h3>
+                <h3>PROJECTS</h3>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
 <div class="title-card">
     <div class="container">
         <div class="title-card-banner">
-            <h3>About Me</h3>
+            <h3>ABOUT ME</h3>
         </div>
     </div>
 </div>
@@ -160,7 +160,7 @@
     <div class="title-card">
         <div class="container">
             <div class="title-card-banner">
-                <h3>Contact</h3>
+                <h3>CONTACT</h3>
             </div>
         </div>
     </div>
@@ -181,7 +181,7 @@
                 </div>
             {% endfor %}
         </form>
-        <div class="form-btn"><button class="u-button" type="submit" form="contact-form" value="Submit">SEND</button></div>
+        <div class="form-btn"><button class="u-button" type="submit" form="contact-form" value="Submit"><i style="margin-right: 5px;" class="fa-solid fa-paper-plane"></i>Send</button></div>
         <script>
             var message = "{{ form_message }}";
             if (message) {
