--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-md fixed-top">
     <div class="container-fluid">
-        <div class="logo"><a class="navbar-brand" href="#">MSRportfolio</a></div>
+        <div class="logo"><a class="navbar-brand" href="#"><img src="{{page.logo.url}}"></a></div>
         <ul class="menu-list navbar-nav">
             <div class="icon cancel-btn">
                 <i class="fas fa-times"></i>
