--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -27,6 +27,11 @@ html {
   text-decoration: underline;
 }
 
+.u-button:disabled{
+  text-decoration: none;
+  color: gray;
+}
+
 .banner{
   height: 100vh;
   background-image: url("/static/uploads/images/bg.png");
@@ -58,15 +63,15 @@ html {
   text-align: center;
   background-color: white;
   width: 100%;
-  height: 30px;
+  height: 28px;
   max-width: 130px;
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.5);
 }
 
 .title-card-banner h3{
-  font-size: 25px;
-  font-weight: 500;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .project-tags{
@@ -96,6 +101,13 @@ html {
 /* UNIVERSAL STYLING */
 
 /* NAVBAR STYLING START */
+.logo img{
+  width: 100%;
+  height: 100%;
+  max-width: 100px;
+  object-fit: cover;
+}
+
 .navbar{
   padding: 10px 30px;
   transition: all 0.4s ease;
