--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -24,7 +24,12 @@ html {
 }
 
 .u-button:hover{
-  color: silver;
+  text-decoration: underline;
+}
+
+.u-button:disabled{
+  text-decoration: none;
+  color: gray;
 }
 
 .banner{
@@ -58,15 +63,15 @@ html {
   text-align: center;
   background-color: white;
   width: 100%;
-  height: 30px;
+  height: 28px;
   max-width: 130px;
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.5);
 }
 
 .title-card-banner h3{
-  font-size: 25px;
-  font-weight: 500;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .project-tags{
@@ -76,8 +81,8 @@ html {
 .tag-pill h6{
   text-align: center;
   padding: 0px 5px;
-  font-size: 13px;
-  color: grey;
+  font-size: 14px;
+  color: rgb(105, 89, 89);
 }
 
 .tag-pill{
@@ -96,9 +101,20 @@ html {
 /* UNIVERSAL STYLING */
 
 /* NAVBAR STYLING START */
+.logo img{
+  width: 100%;
+  height: 100%;
+  max-width: 100px;
+  object-fit: cover;
+}
+
 .navbar{
   padding: 10px 30px;
   transition: all 0.4s ease;
+}
+
+.nav-item{
+  cursor: pointer;
 }
 
 .menu-list .nav-item{
@@ -358,12 +374,56 @@ html {
 /* PROJECTS STYLING END */
 
 /* ABOUT ME STYLING */
-.about-me{
+
+.about-me-lines{
+  font-size: 18px;
   padding: 20px 0;
 }
 
-.about-me h5{
-  padding: 20px 0;
+.about-me-lines p{
+  padding: 10px 0;
+}
+
+.skill-stack ul{
+  list-style: none;
+  padding: 10px;
+}
+
+.skill-title{
+  padding: 30px 0;
+}
+
+.skill-pill{
+  background-color: white;
+  border-radius: 15px;
+  width: 100%;
+  max-width: 100px;
+  box-shadow: 1px 2px 5px 0px rgba(20, 19, 61, 0.2);
+}
+
+.skill-pill li{
+  font-size: 15px;
+  color: #14133d;
+}
+
+.resume-dl button {
+  padding: 2px;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: #14133d;
+  transition: all 0.1s;
+}
+
+.resume-dl button:hover {
+  text-decoration: underline;
+}
+
+.resume-dl button:disabled {
+  background-color: #ddd;
+  color: #888;
+  text-decoration: none;
+  cursor: default;
 }
 /* ABOUT ME STYLING END */
 
@@ -424,7 +484,6 @@ html {
 }
 
 .footer-card .social-list{
-  list-style: none;
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
