--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,8 +4,8 @@
     <div class="footer-card">
         <div class="content">
             <div class="social-list">
-                <a href="{{profile.social_linkedin}}"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                <a href="{{profile.social_github}}"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                <a href="{{profile.social_linkedin}}" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                <a href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
             </div>
             <div class="copyright-row">
                 <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
