--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -33,18 +33,30 @@ html {
 }
 
 .banner{
+  width: 100%;
   height: 100vh;
-  background-image: url("/static/uploads/images/bg.png");
   background-size: cover;
+  background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
   background-attachment: fixed;
   overflow: hidden;
 }
 
+@media (max-width: 568px) {
+  .banner{
+    width: 100%;
+    height: 100vh;
+    background-image: url('/static/uploads/images/bg.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    overflow: hidden;
+  }
+}
+
 .title-card .container{
   padding: 8px 0px;
-  background-image: url("/static/uploads/images/bg.png");
   background-size: cover;
+  background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
   background-attachment: fixed;
   border-radius: 5px;
@@ -184,6 +196,13 @@ html {
 
 /* unless the screen width is at least ...px, do not display */
 @media (max-width: 568px) {
+  .logo img{
+    width: 100%;
+    height: 100%;
+    max-width: 80px;
+    object-fit: cover;
+  }
+  
   .navbar .menu-list{
     position: fixed;
     top: -0.1%;
