--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -38,17 +38,16 @@ html {
   background-size: cover;
   background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: fixed !important;
   overflow: hidden;
 }
 
 @media (max-width: 568px) {
   .banner{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     background-image: url('/static/uploads/images/bg.jpg');
-    background-position: center;
-    background-attachment: fixed;
+    background-attachment: fixed !important;
     overflow: hidden;
   }
 }
