--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;300;400;500;600;700&display=swap');
 
 /* UNIVERSAL STYLING */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,6 +11,17 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+.not-found {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.not-found .card{
+  padding: 20px
 }
 
 .u-button{
@@ -38,17 +49,16 @@ html {
   background-size: cover;
   background-image: url('/static/uploads/images/bg.jpg');
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: fixed !important;
   overflow: hidden;
 }
 
 @media (max-width: 568px) {
   .banner{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     background-image: url('/static/uploads/images/bg.jpg');
-    background-position: center;
-    background-attachment: fixed;
+    background-attachment: fixed !important;
     overflow: hidden;
   }
 }
