Media files are no stored in an AWS S3 bucket

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -145,7 +145,7 @@
                 {% if profile.resume %}
                     <a href="{{ profile.resume.url }}"><button><i style="padding: 0 5px" class="fa-solid fa-download"></i>Resume</button></a>
                 {% else %}
-                    <button disabled>Download Resume</button>
+                    <button disabled class=".u-button"><i style="padding: 0 5px" class="fa-solid fa-download"></i>Resume</button></a>
                 {% endif %}
             </div>
         </div>
