--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,26 @@
 {% load static %}
 
-<div class="container">
-    <div class="not-found">
-        <div class="card text-center">
-            <h4>Page not found!</h4>
-            <img src="{{page.fourofour.url}}">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/76d03bfb37.js"></script>
+    {% comment %} <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+    <title>.S. Portfolio</title>
+</head>
+<body>
+    <div class="container">
+        <div class="not-found">
+            <div class="card text-center">
+                <h4>Page not found!</h4>
+                <img src="{{page.fourofour.url}}">
+            </div>
         </div>
     </div>
-</div>
+</body>
+</html>
