Projects model bug fix

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -60,15 +60,15 @@
                                 </div>
                             </div>
                             <div class="card-btns">
-                                {% if project.demo_link == "None" %}
-                                    <a href="{{project.demo_link}}" target="_blank" class=""><button disabled class="u-button"><i style="margin-right: 5px" class="fa-solid fa-eye"></i>Live Demo</button></a>
-                                {% else %}
+                                {% if project.demo_link %}
                                     <a href="{{project.demo_link}}" target="_blank" class=""><button class="u-button"><i style="margin-right: 5px" class="fa-solid fa-eye"></i>Live Demo</button></a>
-                                {% endif %}
-                                {% if project.source_link == "None" %}
-                                    <a href="{{project.source_link}}" target="_blank" class=""><button disabled class="u-button"><i style="margin-right: 5px" class="fa-brands fa-github"></i>Code</button></a>
                                 {% else %}
+                                    <a href="{{project.demo_link}}" target="_blank" class=""><button disabled class="u-button"><i style="margin-right: 5px" class="fa-solid fa-eye"></i>Live Demo</button></a>
+                                {% endif %}
+                                {% if project.source_link %}
                                     <a href="{{project.source_link}}" target="_blank" class=""><button class="u-button"><i style="margin-right: 5px" class="fa-brands fa-github"></i>Code</button></a>
+                                {% else %}
+                                    <a href="{{project.source_link}}" target="_blank" class=""><button disabled class="u-button"><i style="margin-right: 5px" class="fa-brands fa-github"></i>Code</button></a>
                                 {% endif %}
                             </div>
                         </div>
