--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content=".S. Portfolio">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="{{page.link_preview_img.url}}">
+    <meta property="og:image" content="{% if page.link_preview_img %}{{ page.link_preview_img.url }}{% else %}''{% endif %}">
     <meta property="og:description" content="Check out my portfolio to see my projects and experience">
     <script src="https://kit.fontawesome.com/76d03bfb37.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
